analyzer/tests/snapshots/errors__strict_boolean_if_else.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: `if` statement condition is not bool
  ┌─ tests/fixtures/errors/strict_boolean_if_else.fe:3:12
  │
3 │         if val:
  │            ^^^ this has type `u256`; expected type `bool`


