analyzer/tests/snapshots/errors__struct_call_without_kw_args.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: missing argument label
  ┌─ tests/fixtures/errors/struct_call_without_kw_args.fe:8:33
  │
8 │         my_house: House = House(true, price=1000000)
  │                                 ^ add `vacant=` here
  │
  = Note: this label is optional if the argument is a variable named `vacant`.


