analyzer/tests/snapshots/errors__ternary_type_mismatch.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `if` test expression must be a `bool`
  ┌─ [snippet]:3:9
  │
3 │   10 if 100 else true
  │         ^^^ this has type `u256`; expected `bool`

error: `if` and `else` values must have same type
  ┌─ [snippet]:3:3
  │
3 │   10 if 100 else true
  │   ^^             ---- this has type `bool`
  │   │               
  │   this has type `u256`


