analyzer/tests/snapshots/errors__type_constructor_arg_count.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `u8` expects 1 argument, but 2 were provided
  ┌─ [snippet]:3:11
  │
3 │   x: u8 = u8(1, 10)
  │           ^^ -  -- supplied 2 arguments
  │           │      
  │           expects 1 argument


