analyzer/tests/snapshots/errors__undefined_type.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: undefined type
  ┌─ [snippet]:3:6
  │
3 │   x: foobar = 10
  │      ^^^^^^ this type name has not been defined


